[project]
name = "vd-games"
version = "0.1.0"
description = "A collection of console games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]
